--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ hr{
     position:relative;
     height:50px;
     border-radius:10px;
-    margin:10px;
+    margin:0px;
+    margin-top:6px;
     padding:0px;
     font-family: "Bebas Neue", sans-serif;
     font-weight: 100;
