--- a/style.css
+++ b/style.css
@@ -59,11 +59,15 @@ hr{
     position:relative;
     height:50px;
     border-radius:10px;
-    margin:0px;
-    margin-top:6px;
+    margin:10px;
     padding:0px;
     font-family: "Bebas Neue", sans-serif;
     font-weight: 100;
     font-style: normal;
     border:solid black 2px
+}
+
+.footer ul{
+    margin:0px;
+    margin-top:6px;
 }
